# JGolangCompiler

./: .gitignore  CMakeLists.txt  Makefile  ast.cpp  ast.h  context.h  enums.h  lexer.hpp  lexer.lpp  main.cpp  parser.y  tree_nodes.cpp  tree_nodes.h  visitor.h
RTL/: $Base.java
Runtime Library/: $Base.java  BuiltIn.java
codegen/: codegen.cpp  codegen.h  comands.h  commands.h  constant.cpp  constant.h  constant_visitor.cpp  constant_visitor.h
entities/: class_entity.cpp  class_entity.h  type_entity.cpp  type_entity.h
lexer/: lexer.hpp  lexer.l  lexer.lpp
parser/: parser.y
semantic/: built_in_functions.cpp  classes_node_visitor.cpp  classes_node_visitor.h  entities.cpp  entities.h  java_class.cpp  java_class.h  java_entity.cpp  java_entity.h  java_entity_visitor.cpp  java_entity_visitor.h  java_interface.cpp  java_interface.h  java_method.cpp  java_method.h  precalculate_visitor.cpp  precalculate_visitor.h  semantic.cpp  semantic.h  statements_visitor.cpp  statements_visitor.h  transformation_visitor.cpp  transformation_visitor.h  types_visitor.cpp  types_visitor.h
semantic/visitors/: expressions_visitor.cpp  expressions_visitor.h  loops_visitor.cpp  loops_visitor.h  statements_visitor.cpp  statements_visitor.h  type_check_visitor.cpp  type_check_visitor.h  types_visitor.cpp  types_visitor.h
tests/algorithms/: binary-search.go  bubble-sort.go  factorial.go  heap-sort.go  hello_world.go  square_paint.go  square_snake.go
tests/arrays/: append.go  matrix_init.go  (+2 more)
utils/: bytes.cpp  bytes.h  bytes.hpp  dot.cpp  dot_visitor.cpp  dot_visitor.h  io.cpp  io.hpp
(+58 files in other folders)
